--- a/app/src/main/res/layout/activity_hw_profile.xml
+++ b/app/src/main/res/layout/activity_hw_profile.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tool="http://schemas.android.com/tools"
     android:fillViewport="true"
     android:scrollbars="none"
     android:overScrollMode="never">
@@ -300,7 +301,7 @@
                 <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -345,7 +346,7 @@
                 <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:id="@+id/hw_patientregister"
@@ -374,7 +375,7 @@
                 <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -419,7 +420,7 @@
                 <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -464,7 +465,7 @@
                 <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -515,6 +516,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_margin="15dp"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:text="@string/button_save"
@@ -522,13 +525,10 @@
             android:fontFamily="@font/lato_bold"
             android:gravity="center_horizontal"
             android:visibility="gone"
+            tool:visibility="visible"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
             android:background="@drawable/hw_profileinfo_bg"
             app:layout_constraintTop_toBottomOf="@+id/hw_detail_cardview"/>
 
